@@ -25,7 +25,9 @@ import java.io.PrintWriter;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.TreeMap;
 
 /**
@@ -51,16 +53,16 @@ public class ExperimentVoter extends Thread {
 	private String expName;
 	
 	/** The algorithm list. */
-	private CustomArrayList<AlgorithmVoter> algList;
+	private List<AlgorithmVoter> algList;
 	
 	/** The complete results of the voting. */
-	private TreeMap<Date, HashMap<AlgorithmVoter, Double>> partialVoting;
+	private Map<Date, Map<AlgorithmVoter, Double>> partialVoting;
 	
 	/** The contracted results of the voting. */
-	private TreeMap<Date, Double> voting;
+	private List<VotingResult> voting;
 	
 	/** The list of the snapshots for each voter */
-	private CustomArrayList<HashMap<AlgorithmVoter, Snapshot>> expSnapMap;
+	private List<Map<AlgorithmVoter, Snapshot>> expSnapMap;
 	
 	private EvaluationTiming eTiming;
 	
@@ -79,9 +81,9 @@ public class ExperimentVoter extends Thread {
 		expSnapMap = loadExpAlgSnapshots(expData);
 	}
 	
-	private CustomArrayList<HashMap<AlgorithmVoter, Snapshot>> loadExpAlgSnapshots(ExperimentData expData) {
-		HashMap<AlgorithmVoter, Snapshot> newMap;
-		CustomArrayList<HashMap<AlgorithmVoter, Snapshot>> expAlgMap = new CustomArrayList<HashMap<AlgorithmVoter, Snapshot>>(expData.getSnapshotNumber());
+	private List<Map<AlgorithmVoter, Snapshot>> loadExpAlgSnapshots(ExperimentData expData) {
+		Map<AlgorithmVoter, Snapshot> newMap;
+		List<Map<AlgorithmVoter, Snapshot>> expAlgMap = new ArrayList<Map<AlgorithmVoter, Snapshot>>(expData.getSnapshotNumber());
 		for(int i=0;i<expData.getSnapshotNumber();i++){
 			newMap = new HashMap<AlgorithmVoter, Snapshot>();
 			for(AlgorithmVoter aVoter : algList){
@@ -98,8 +100,8 @@ public class ExperimentVoter extends Thread {
 	 * @param algVoters the algorithms
 	 * @return the deep-cloned list
 	 */
-	private CustomArrayList<AlgorithmVoter> deepClone(List<AlgorithmVoter> algVoters) {
-		CustomArrayList<AlgorithmVoter> list = new CustomArrayList<AlgorithmVoter>(algVoters.size());
+	private List<AlgorithmVoter> deepClone(List<AlgorithmVoter> algVoters) {
+		List<AlgorithmVoter> list = new ArrayList<AlgorithmVoter>(algVoters.size());
 		try {
 			for(AlgorithmVoter aVoter : algVoters){
 				list.add(aVoter.clone());
@@ -117,10 +119,10 @@ public class ExperimentVoter extends Thread {
 	public void run() {
 		double baseTime;
 		Snapshot snapshot = null;
-		HashMap<AlgorithmVoter, Double> snapVoting;
+		Map<AlgorithmVoter, Double> snapVoting;
 		ExperimentTiming expTiming = new ExperimentTiming(expSnapMap.size());
-		partialVoting = new TreeMap<Date, HashMap<AlgorithmVoter, Double>>();
-		voting = new TreeMap<Date, Double>();
+		partialVoting = new TreeMap<Date, Map<AlgorithmVoter, Double>>();
+		voting = new ArrayList<VotingResult>(expSnapMap.size());
 		if(algList.size() > 0) {
 			for(int i=0;i<expSnapMap.size();i++){
 				snapVoting = new HashMap<AlgorithmVoter, Double>();
@@ -132,7 +134,7 @@ public class ExperimentVoter extends Thread {
 				}
 				baseTime = AppUtility.readMillis();
 				partialVoting.put(snapshot.getTimestamp(), snapVoting);
-				voting.put(snapshot.getTimestamp(), voteResults(snapVoting));
+				voting.add(new VotingResult(snapshot.getTimestamp(), voteResults(snapVoting)));
 				expTiming.setVotingTime(AppUtility.readMillis() - baseTime);
 			}
 		}
@@ -145,7 +147,7 @@ public class ExperimentVoter extends Thread {
 	 * @param algResults the complete algorithm scoring results
 	 * @return contracted anomaly score
 	 */
-	private double voteResults(HashMap<AlgorithmVoter, Double> algResults){
+	private double voteResults(Map<AlgorithmVoter, Double> algResults){
 		double snapScore = 0.0;
 		for(AlgorithmVoter aVoter : algList){
 			snapScore = snapScore + 1.0*aVoter.getReputationScore()*algResults.get(aVoter);
@@ -164,7 +166,7 @@ public class ExperimentVoter extends Thread {
 	 * @param printOutput 
 	 * @return 
 	 */
-	public HashMap<Metric, Double> printVoting(String outFormat, String outFolderName, Metric[] validationMetrics, double anomalyTreshold, double algConvergence, boolean printOutput) {
+	public Map<Metric, Double> printVoting(String outFormat, String outFolderName, Metric[] validationMetrics, double anomalyTreshold, double algConvergence, boolean printOutput) {
 		if(printOutput){
 			for(AlgorithmVoter aVoter : algList){
 				aVoter.printResults(outFormat, outFolderName, expName);
@@ -182,7 +184,7 @@ public class ExperimentVoter extends Thread {
 	 * @param algConvergence the algorithm convergence time (for printing)
 	 * @param printOutput 
 	 */
-	private HashMap<Metric, Double> printExperimentVoting(String outFolderName, Metric[] validationMetrics, double anomalyTreshold, double algConvergence, boolean printOutput) {
+	private Map<Metric, Double> printExperimentVoting(String outFolderName, Metric[] validationMetrics, double anomalyTreshold, double algConvergence, boolean printOutput) {
 		if(printOutput){
 			printGraphics(outFolderName, anomalyTreshold, algConvergence);
 			printText(outFolderName);
@@ -198,9 +200,9 @@ public class ExperimentVoter extends Thread {
 	 * @param anomalyTreshold the anomaly threshold
 	 * @return 
 	 */
-	private synchronized HashMap<Metric, Double> printMetrics(String outFolderName, Metric[] validationMetrics, double anomalyTreshold, boolean printOutput) {
+	private synchronized Map<Metric, Double> printMetrics(String outFolderName, Metric[] validationMetrics, double anomalyTreshold, boolean printOutput) {
 		PrintWriter pw;
-		HashMap<Metric, Double> metResults = new HashMap<Metric, Double>();
+		Map<Metric, Double> metResults = new HashMap<Metric, Double>();
 		try {
 			for(Metric met : validationMetrics){
 				metResults.put(met, met.evaluateAnomalyResults(getSimpleSnapshotList(), voting, anomalyTreshold));
@@ -222,8 +224,8 @@ public class ExperimentVoter extends Thread {
 
 	private List<Snapshot> getSimpleSnapshotList() {
 		List<Snapshot> simpleList = new ArrayList<Snapshot>(expSnapMap.size());
-		for(HashMap<AlgorithmVoter, Snapshot> map : expSnapMap){
-			simpleList.add(map.get(algList.getFirst()));
+		for(Map<AlgorithmVoter, Snapshot> map : expSnapMap){
+			simpleList.add(map.get(algList.get(0)));
 		}
 		return simpleList;
 	}
@@ -237,24 +239,35 @@ public class ExperimentVoter extends Thread {
 	 */
 	private void printGraphics(String outFolderName, double anomalyTreshold, double algConvergence){
 		HistogramChartDrawer hist;
-		HashMap<String, TreeMap<Double, Double>> voterMap = new HashMap<String, TreeMap<Double, Double>>();
-		voterMap.put(ANOMALY_SCORE_LABEL, AppUtility.convertMapSnapshots(voting));
+		Map<String, List<VotingResult>> voterMap = new HashMap<String, List<VotingResult>>();
+		voterMap.put(ANOMALY_SCORE_LABEL, voting);
 		voterMap.put(FAILURE_LABEL, convertFailures(expSnapMap));
-		hist = new HistogramChartDrawer("Anomaly Score", "Seconds", "Score", voterMap, anomalyTreshold, algConvergence);
+		hist = new HistogramChartDrawer("Anomaly Score", "Seconds", "Score", resultToMap(voterMap), anomalyTreshold, algConvergence);
 		hist.saveToFile(outFolderName + "/voter/graphic/" + expName + ".png", IMG_WIDTH, IMG_HEIGHT);
 	}
 	
-	private TreeMap<Double, Double> convertFailures(CustomArrayList<HashMap<AlgorithmVoter, Snapshot>> expSnapMap) {
-		TreeMap<Date, Double> treeMap = new TreeMap<Date, Double>();
-		for(HashMap<AlgorithmVoter, Snapshot> map : expSnapMap){
-			if(map.get(algList.getFirst()).getInjectedElement() != null){
-				treeMap.put(map.get(algList.getFirst()).getTimestamp(), 1.0);
-				for(int i=1;i<=map.get(algList.getFirst()).getInjectedElement().getDuration();i++){
-					treeMap.put(new Date(map.get(algList.getFirst()).getTimestamp().getTime() + i*1000), -1.0);
+	private Map<String, Map<Double, Double>> resultToMap(Map<String, List<VotingResult>> voterMap) {
+		Map<String, Map<Double, Double>> map = new HashMap<String, Map<Double,Double>>();
+		for(String mapTag : voterMap.keySet()){
+			map.put(mapTag, new TreeMap<Double,Double>());
+			for(VotingResult vr : voterMap.get(mapTag)){
+				map.get(mapTag).put(vr.getDateOffset(voterMap.get(mapTag).get(0).getDate()), vr.getValue());
+			}
+		}
+		return map;
+	}
+
+	private List<VotingResult> convertFailures(List<Map<AlgorithmVoter, Snapshot>> expSnapMap) {
+		List<VotingResult> failList = new LinkedList<VotingResult>();
+		for(Map<AlgorithmVoter, Snapshot> map : expSnapMap){
+			if(map.get(algList.get(0)).getInjectedElement() != null){
+				failList.add(new VotingResult(map.get(algList.get(0)).getTimestamp(), 1.0));
+				for(int i=1;i<=map.get(algList.get(0)).getInjectedElement().getDuration();i++){
+					failList.add(new VotingResult(new Date(map.get(algList.get(0)).getTimestamp().getTime() + i*1000), -1.0));
 				}
 			}
 		}
-		return AppUtility.convertMapTimestamps(expSnapMap.getFirst().get(algList.getFirst()).getTimestamp(), treeMap);
+		return failList;
 	}
 	
 	/**
@@ -264,7 +277,7 @@ public class ExperimentVoter extends Thread {
 	 */
 	private void printText(String outFolderName){
 		BufferedWriter writer = null;
-		HashMap<LayerType, HashMap<AlgorithmType, Integer>> countMap;
+		Map<LayerType, Map<AlgorithmType, Integer>> countMap;
 		String partial;
 		int count;
 		try {
@@ -288,7 +301,7 @@ public class ExperimentVoter extends Thread {
 						count++;
 					}
 				}
-				writer.write(AppUtility.getSecondsBetween(timestamp, expSnapMap.getFirst().get(algList.getFirst()).getTimestamp()) + ",");
+				writer.write(AppUtility.getSecondsBetween(timestamp, expSnapMap.get(0).get(algList.get(0)).getTimestamp()) + ",");
 				writer.write(count + ",");
 				for(LayerType currentLayer : countMap.keySet()){
 					for(AlgorithmType algTag : countMap.get(currentLayer).keySet()){
@@ -308,8 +321,8 @@ public class ExperimentVoter extends Thread {
 	 *
 	 * @return the basic map
 	 */
-	private HashMap<LayerType, HashMap<AlgorithmType, Integer>> buildMap() {
-		HashMap<LayerType, HashMap<AlgorithmType, Integer>> map = new HashMap<LayerType, HashMap<AlgorithmType, Integer>>();
+	private Map<LayerType, Map<AlgorithmType, Integer>> buildMap() {
+		Map<LayerType, Map<AlgorithmType, Integer>> map = new HashMap<LayerType, Map<AlgorithmType, Integer>>();
 		for(AlgorithmVoter aVoter : algList){
 			if(!map.keySet().contains(aVoter.getLayerType()))
 				map.put(aVoter.getLayerType(), new HashMap<AlgorithmType, Integer>());
